# opentelemetry-specification

./: .cspell.yaml  .gitattributes  .gitignore  .lychee.toml  .markdown_link_check_config.json  .markdownlint.yaml  .mdlrc  .mdlstyle.rb  .textlintignore  .textlintrc.yml  .travis.yml  .yamllint  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  conformance_clause.md  docfx.cmd  docfx.json  go.mod  go.sum  issue-management.md  milestones.md  package-lock.json  package.json  post-ga-workflow.md  semantic-conventions.md  spec-compliance-matrix.md  specification.md  table_generator.py  terminology.md  toc.yml
.circleci/: config.yml
.cspell/: en-words.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  auto_assign.yml  auto_assign_issue.yml  auto_assign_pr.yml  copilot-instructions.md  renovate.json5
contrib/: README.md
development/: README.md
experimental/: README.md  metric-config-service.md  zpages.md
internal/: markdownlint.yaml  tools.go
oteps/: 0000-OpAmp-metric-schedule-extension.md  0000-agent-telemetry-semantic-conventions.md  0000-cumulative-to-counter.md  0000-export-auth.md  0000-federated-semantic-conventions-lifecycle.md  0000-otlp-proto-choice.md  0000-template.md  (+75 more)
yaml/tool/: README.md  requirements.txt  setup.cfg  setup.py
yaml/tool/src/dynatrace/semconv/: main.py  version.py
yaml/tool/src/dynatrace/semconv/model/: constraints.py  exceptions.py  semantic_attribute.py  semantic_convention.py  utils.py
yaml/tool/src/dynatrace/semconv/templating/: constant.py  jinja.py  markdown.py
(+610 files in other folders)
