# Copyright 2019, Dynatrace

[metadata]
name = semconvgen
description = Dynatrace Semantic Convention utility
author = Dynatrace
author_email = giovanni.liva@dynatrace.com
url = https://www.dynatrace.com/
platforms = any
classifiers =
    Development Status :: 1 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.6

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find_namespace:
install_requires =
    black==19.10b0
    dataclasses==0.6
    mypy==0.770
    mypy-extensions==0.4.3
    ruamel.yaml==0.16.10
    ruamel.yaml.clib==0.2.0
    typed-ast==1.4.1
    typing-extensions==3.7.4.2
    Jinja2==2.11.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gen-semconv = dynatrace.semconv.main:main